parser/tests/snapshots/errors__module_nonsense.snap
---
source: parser/tests/errors.rs
expression: err

---
error: Unmatched right parenthesis
  ┌─ module_nonsense:1:1
  │
1 │ ))
  │ ^


